# Cabinets

./: .env_example  .gitignore  Dockerfile  README.md  demo_data.json  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
freelance/contracts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
freelance/contracts/migrations/: 0001_initial.py  0002_initial.py
freelance/core/: settings.py  urls.py  wsgi.py
freelance/core/settings/: development.py  docker_compose.py  settings.py  testing.py
freelance/offer/: admin.py  forms.py  models.py  urls.py  views.py
freelance/static/css/: styles.css
freelance/templates/: base.html  index.html
freelance/templates/contracts/: contract_create.html  contract_detail.html
freelance/templates/offer/: offer_create.html
freelance/templates/profile/: customer.html  performer.html  profile.html  profile_edit.html
freelance/templates/registration/: login.html  registration.html
freelance/user_profile/: admin.py  custom_cache.py  custom_cahe.py  models.py  urls.py  views.py
freelance/users/: admin.py  backends.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
freelance/users/migrations/: 0001_initial.py  0002_remove_usermodel_first_name_and_more.py  0003_alter_usermodel_email_alter_usermodel_username.py
